GNOME Bugzilla – Bug 723197
shell-app: Don't crash when trying to dispose
Last modified: 2014-01-29 19:03:05 UTC
Spotted in the real world by a user on IRC today. I haven't reproduced this crash myself, and I'm not sure of the situation where a ShellApp would be disposed when there's no windows left, but let's not crash here, OK?
Created attachment 267447 [details] [review] shell-app: Don't crash when trying to dispose If we dispose a ShellApp that has windows left, then we'll crash when we remove the last window, as that frees and NULLs out app->running_state.
I am that guy from IRC. To reproduce the bug you have to use the auto-complete feature in Intellij IDEA in some ActionScript code. When the auto-complete window closes gnome-shell crashes. I just applied the patch and build a local rpm. My line numbers were others, (1556 instead of 1384) but it works now, I can not reproduce the bug with my patched rpm.
Review of attachment 267447 [details] [review]: LGTM
Attachment 267447 [details] pushed as 36c6912 - shell-app: Don't crash when trying to dispose